<resources>
    <string name="app_name">Talon</string>
    <string name="app_name_full">Talon for Twitter</string>
    <string name="extension_description">Displays the number of unread tweets, mentions and direct messages as they are updated.</string>
    <string name="menu_refresh">Refresh Timeline</string>
    <string name="menu_compose">New Tweet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_follow">Follow User</string>
    <string name="menu_unfollow">Un-Follow User</string>
    <string name="menu_tweet">Send Tweet</string>
    <string name="menu_dm">Send Direct Message</string>
    <string name="menu_block">Block User</string>
    <string name="menu_unblock">Unblock User</string>
    <string name="menu_add_to_list">Add to List</string>
    <string name="menu_change_picture">Change Profile Picture</string>
    <string name="menu_change_bio">Change Profile Info</string>
    <string name="menu_change_banner">Change Profile Banner</string>
    <string name="menu_direct_message">New Direct Message</string>
    <string name="menu_save_image">Save Image</string>
    <string name="menu_favorite">Favorite User</string>
    <string name="menu_unfavorite">Un-Favorite User</string>
    <string name="menu_create_list">Create New List</string>
    <string name="menu_spam">Mark as Spam</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">a minute ago</string>
    <string name="minutes_ago">%s minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%s days ago</string>
    <string name="mute">Mute</string>
    <string name="unmute">Un-Mute</string>
    <string name="muted_users">Muted Users</string>
    <string name="no_users">No Users</string>
    <string name="links">Links</string>
    <string name="pictures">Pictures</string>
    <string name="timeline">Home</string>
    <string name="mentions">Mentions</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="retweets">Retweets</string>
    <string name="favorite_tweets">Liked Tweets</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="favorite_users_tweets">Favorite User Tweets</string>
    <string name="trends">Trending</string>
    <string name="local_trends">Local Trends</string>
    <string name="world_trends">World Trends</string>
    <string name="search">Search</string>
    <string name="lists">Lists</string>
    <string name="search_hint">Search...</string>
    <string name="new_tweet">new tweet</string>
    <string name="new_tweets">new tweets</string>
    <string name="no_new_tweets">No new tweets</string>
    <string name="new_mention">new mention</string>
    <string name="new_mentions">new mentions</string>
    <string name="no_new_mentions">No new mentions</string>
    <string name="new_direct_message">new direct message</string>
    <string name="new_direct_messages">new direct messages</string>
    <string name="no_new_direct_messages">No new direct messages</string>
    <string name="tap_to_setup">Tap to setup</string>
    <string name="new_account">New Account</string>
    <string name="from_top">from top</string>
    <string name="jump_to_top">To First</string>
    <string name="all_read">All Read!</string>
    <string name="view_new">Load?</string>
    <string name="old_interactions">All Interactions</string>
    <string name="tweet">Tweet</string>
    <string name="tweets">Tweets</string>
    <string name="mention">Mention</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">new message</string>
    <string name="new_messages">new messages</string>
    <string name="mentioned_by">Mentioned by</string>
    <string name="message_from">Message from</string>
    <string name="mark_read">Read</string>
    <string name="noti_reply">Reply</string>
    <string name="popup">Popup</string>
    <string name="fav_user_tweets">new favorite user tweets</string>
    <string name="sec_acc">Second Account</string>
    <string name="talon_pull">Talon Pull</string>
    <string name="talon_pull_summary">WARNING: Enabling this option can cause significant battery drain on Android Lollipop.</string>
    <string name="listening">Listening</string>
    <string name="listening_for_mentions">Listening for interactions</string>
    <string name="refreshing">Refreshing</string>
    <string name="refreshing_widget">Refreshing widget</string>
    <string name="downloading">Downloading</string>
    <string name="new_interaction_upper">New Interaction</string>
    <string name="new_interactions_lower">new interactions</string>
    <string name="new_interactions">New Interactions</string>
    <string name="retweeted">retweeted your status</string>
    <string name="favorited">liked your status</string>
    <string name="quoted">quoted your status</string>
    <string name="followed">followed you</string>
    <string name="new_retweets">retweets</string>
    <string name="new_favorites">likes</string>
    <string name="new_quotes">quotes</string>
    <string name="new_tweets_upper">New Tweets</string>
    <string name="setup_talon">Setup Talon</string>
    <string name="login_to_twitter">Login to Twitter</string>
    <string name="first_welcome">Welcome to Talon!</string>
    <string name="second_welcome">Syncing Data</string>
    <string name="third_welcome">That\'s it - enjoy!</string>
    <string name="back_to_timeline">Take me to my timeline!</string>
    <string name="initial_sync">Sync Now!</string>
    <string name="first_info">Before we get started, let\'s get you logged in and synced with Twitter.</string>
    <string name="second_info">Great! We are now talking to Twitter to sync your account.</string>
    <string name="third_info">Hope you enjoy Talon!</string>
    <string name="syncing_timeline">Syncing timeline...</string>
    <string name="syncing_mentions">Syncing mentions...</string>
    <string name="syncing_direct_messages">Syncing direct messages...</string>
    <string name="syncing_user">Syncing friends...</string>
    <string name="done_syncing">Done with sync.</string>
    <string name="login_error">Something went wrong... Please retry!\n\nIt could be that your date and time on your device isn\'t set to automatic. This is a requirement of Twitter\'s 3rd party API.</string>
    <string name="no_network">You aren\'t connected to the internet</string>
    <string name="no_thanks">Not now</string>
    <string name="follow_me">Follow!</string>
    <string name="follow_me_description">Use the check button to auto-follow support accounts, or press the back button to skip this.</string>
    <string name="compose_activity">New Tweet</string>
    <string name="compose_tweet_hint">Type tweet...</string>
    <string name="send_to">Type user\'s name...</string>
    <string name="direct_message_sent">Direct Message Sent</string>
    <string name="type_user">Type User</string>
    <string name="add_user">Add User</string>
    <string name="location_connected">Location attached</string>
    <string name="location_disconnected">Location lost</string>
    <string name="finding_location">Looking for locations</string>
    <string name="draft_found">Draft found</string>
    <string name="apply">Apply?</string>
    <string name="tweet_failed">Error sending tweet</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="one_recepient">You can only send Direct Messages to one user!</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="placeholder">Placeholder</string>
    <string name="reply">Reply...</string>
    <string name="error">Error</string>
    <string name="error_loading_page">Error loading web page</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_direct_message">Delete Message?</string>
    <string name="save_image">Image Saved</string>
    <string name="tweet_success">Tweet Successful</string>
    <string name="error_sending_tweet">Error Sending Tweet</string>
    <string name="tweet_to_long">Tweet too long!</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="changelog">What\'s New</string>
    <string name="created_by">Created by</string>
    <string name="no_location">Couldn\'t find location</string>
    <string name="take_picture">Capture Image</string>
    <string name="from_file">Attach Image</string>
    <string name="via">via</string>
    <string name="version">Version</string>
    <string name="from">From</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="tweeted">tweeted</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="blocked_user">Blocked User</string>
    <string name="unblocked_user">Unblocked User</string>
    <string name="followed_user">Followed User</string>
    <string name="unfollowed_user">Un-Followed User</string>
    <string name="no_description">No user description available.</string>
    <string name="favorite_user">Favorited User</string>
    <string name="unfavorite_user">Un-Favorited User</string>
    <string name="updating_pro_pic">Updating Profile Picture</string>
    <string name="updating_banner_pic">Updating Banner Picture</string>
    <string name="uploaded">File Uploaded</string>
    <string name="change_profile_info">Change Profile Info</string>
    <string name="update">Update</string>
    <string name="optional_name">Name (Optional)</string>
    <string name="optional_url">URL (Optional)</string>
    <string name="optional_location">Location (Optional)</string>
    <string name="optional_description">Description (Optional)</string>
    <string name="updated_profile">Updated Profile</string>
    <string name="name_char_length">Name: 20 character limit</string>
    <string name="url_char_length">URL: 100 character limit</string>
    <string name="location_char_length">Location: 30 character limit</string>
    <string name="description_char_length">Description: 160 character limit</string>
    <string name="sync_settings">Background Syncing</string>
    <string name="notification_settings">Notifications</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="rerun_tutorial">Run Startup Tutorial</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="features_explained">Features Explained</string>
    <string name="youtube">YouTube Video</string>
    <string name="google_plus">Google+ Community</string>
    <string name="email_me">Email Me</string>
    <string name="tweet_me">Tweet at Me</string>
    <string name="follow_talon">Follow Talon on Twitter</string>
    <string name="credits">Credits</string>
    <string name="our_website">Website</string>
    <string name="timelines_settings">Timelines Settings</string>
    <string name="ui_settings">UI Settings</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="memory_manage">App Memory</string>
    <string name="mute_rt">Mute Retweets</string>
    <string name="unmute_rt">Un-mute Retweets</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="info">Info</string>
    <string name="main_pages_and_drawer">Swipable Pages and App Drawer</string>
    <string name="no_activity_yet">No activity yet!</string>
    <string name="no_activity_yet_desc">This section will be filled as you interact more on Twitter.\n\n
        Mentions, new followers, and retweets/likes on your statuses will start to show up here.</string>
</resources>