<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright 2014 Luke Klinker

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?windowBackground">

    <View
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/black" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/selectDate"
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/setDate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_date"
                android:textColor="?textColor" />

            <Button
                android:id="@+id/setTime"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pick_time"
                android:textColor="?textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_and_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectDate"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="?dateColor"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/currentTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="?dateColor"
                android:textSize="25sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sendBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:id="@+id/emojiButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/messageEntry2"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/messageEntry2"
            android:layout_marginRight="-7dp"
            android:background="?android:selectableItemBackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="fitCenter"
            android:src="?emoji_button" />

        <LinearLayout
            android:id="@+id/messageEntry2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/emojiButton"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/tweet_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/compose_tweet_hint"
                android:inputType="textCapSentences|textMultiLine|textShortMessage"
                android:maxLines="8"
                android:minHeight="50dp"
                android:minLines="2"
                android:paddingRight="10dp"
                android:textColor="?textColor"
                android:textSize="17sp" />


            <TextView
                android:id="@+id/char_remaining"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textColor="?dateColor"
                android:textSize="10dp" />

        </LinearLayout>

        <include
            layout="@layout/emoji_keyboard"
            android:layout_below="@+id/messageEntry2" />

    </RelativeLayout>

</RelativeLayout>